2.4.0 now working with tomcat (cherry-picking from commit be7ad4d31076b55d700bca0f1a6ef9bbae3894d3)