@@ -11,9 +11,9 @@
 		This module, packaged as a WAR, contains the core of our implementation of the service.  This pom file will
 		accept the standard maven commands, and contains configurations for a couple of more plugins and profiles:
 		
-		Running 'mvn clean install -Pintegration-test' will start the jetty server and run the remote intergration tests.
+		Running 'mvn clean install -Pintegration-test' will start the tomcat server and run the remote intergration tests.
 		
-		Running 'mvn jetty:run' will start the jetty server and leave it running until the user types "Ctrl-C", so that
+		Running 'mvn cargo:start' will start the tomcat server and leave it running until the user types "Ctrl-C", so that
 		tests can be run in a separate tool (say, Eclipse), or other testing may be performed against the running service.
 		
 		The end result war is configured by various files through spring, using an extension of Spring's property placeholder
@@ -44,8 +44,13 @@
 	</parent>
 
 	<properties>
-		<port>9095</port>
+		<port>8080</port>
+		<apjPort>8010</apjPort>
 		<stopPort>9977</stopPort>
+		<containerId>tomcat7x</containerId>
+		<downloadUrl>http://mirrors.ibiblio.org/apache/tomcat/tomcat-7/v7.0.14/bin/apache-tomcat-7.0.14.zip</downloadUrl>
+		<installDir>${user.home}/.m2/tomcatm2</installDir>
+		<waitForCargo>true</waitForCargo>
 
 		<serverKeyAlias>myservicekey</serverKeyAlias>
 		<testEndpointUrl>http://localhost:${port}/${project.artifactId}/jaxws/TutorialWebService</testEndpointUrl>
@@ -220,37 +225,43 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
 				<configuration>
-					<scanIntervalSeconds>10</scanIntervalSeconds>
-					<stopPort>${stopPort}</stopPort>
-					<stopKey>foo</stopKey>
-					<webAppConfig>
-						<contextPath>/${project.artifactId}</contextPath>
-					</webAppConfig>
-					<webAppSourceDirectory>${basedir}/target/${project.artifactId}-${project.version}</webAppSourceDirectory>
-					<webApp>${basedir}/target/${project.artifactId}-${project.version}.war</webApp>
-					<systemProperties>
-						<systemProperty>
-							<name>configDirectory</name>
-							<value>${basedir}/target/test-classes</value>
-						</systemProperty>
-						<systemProperty>
-							<name>jms.uri</name>
-							<value>${activeMqUrl}</value>
-						</systemProperty>
-						<systemProperty>
-							<name>jms.endpoint</name>
-							<value>${activeMqUrl}</value>
-						</systemProperty>
-					</systemProperties>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>${port}</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
+					<wait>${waitForCargo}</wait>
+					<container>
+						<containerId>${containerId}</containerId>
+						<type>installed</type>
+						<zipUrlInstaller>
+							<url>${downloadUrl}</url>
+							<installDir>${installDir}</installDir>
+						</zipUrlInstaller>
+						<systemProperties>
+							<configDirectory>${basedir}/target/test-classes</configDirectory>
+						</systemProperties>
+					</container>
+					<configuration>
+						<home>${project.build.directory}/${containerId}/container</home>
+						<properties>
+							<cargo.servlet.port>${port}</cargo.servlet.port>
+							<cargo.logging>medium</cargo.logging>
+							<cargo.servlet.users>admin::manager</cargo.servlet.users>
+							<cargo.tomcat.ajp.port>${apjPort}</cargo.tomcat.ajp.port>
+							<cargo.rmi.port>${stopPort}</cargo.rmi.port>
+							<cargo.jvmargs>-Xmx1024m -XX:MaxPermSize=256m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n</cargo.jvmargs>
+						</properties>
+						<deployables>
+							<deployable>
+								<groupId>${project.groupId}</groupId>
+								<artifactId>${project.artifactId}</artifactId>
+								<pingURL>http://localhost:${port}/${project.artifactId}/index.jsp</pingURL>
+								<pingTimeout>60000</pingTimeout>
+								<properties>
+									<context>${project.artifactId}</context>
+								</properties>
+							</deployable>
+						</deployables>
+					</configuration>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -259,25 +270,39 @@
 	<profiles>
 		<profile>
 			<id>integration-test</id>
+			<properties>
+				<waitForCargo>false</waitForCargo>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>jetty-maven-plugin</artifactId>
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven2-plugin</artifactId>
+						<configuration>
+							<configuration>
+								<deployables>
+									<deployable>
+										<groupId>${project.groupId}</groupId>
+										<artifactId>${project.artifactId}</artifactId>
+										<pingURL>http://localhost:${port}/${project.artifactId}/index.jsp</pingURL>
+										<pingTimeout>60000</pingTimeout>
+										<properties>
+											<context>${project.artifactId}</context>
+										</properties>
+									</deployable>
+								</deployables>
+							</configuration>
+						</configuration>
 						<executions>
 							<execution>
-								<id>start-jetty</id>
+								<id>start-container</id>
 								<phase>pre-integration-test</phase>
 								<goals>
-									<goal>run-war</goal>
+									<goal>start</goal>
 								</goals>
-								<configuration>
-									<scanIntervalSeconds>0</scanIntervalSeconds>
-									<daemon>true</daemon>
-								</configuration>
 							</execution>
 							<execution>
-								<id>stop-jetty</id>
+								<id>stop-container</id>
 								<phase>post-integration-test</phase>
 								<goals>
 									<goal>stop</goal>
